# YOLO

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile.cpu  Dockerfile.gpu  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  train.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_suggestion.md  other_issue.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: deploy.yaml  develop.yaml  docker.yaml  main.yaml
config/: RADME.md  config.py  config.yaml
config/data/: augmentation.yaml  coco.yaml  download.yaml
config/hyper/: default.yaml
config/model/: v7-base.yaml
demo/: hf_demo.py
docker/: .dockerignore  Dockerfile  requirements-locked.txt
docs/: CONTRIBUTING.md  HOWTO.md  MODELS.md  conf.py  index.rst  requirements.txt
docs/0_get_start/: 0_quick_start.rst  1_installations.md  1_installations.rst  1_introduction.rst  2_git.md  2_installations.rst  3_pypi.md  4_docker.md  5_conda.md
docs/1_tutorials/: 0_allIn1.rst  0_train.md  0_train.rst  1_setup.rst  1_validation.md  1_validation.rst  2_inference.rst  (+4 more)
examples/: example_inference.py  example_train.py  lazy.py  notebook_TensorRT.ipynb  notebook_inference.ipynb  notebook_smallobject.ipynb  sample_inference.py  sample_train.py
model/: module.py  yolo.py
tests/: conftest.py
tools/: README.md  bbox_helper.py  dataset_helper.py  layer_helper.py  log_helper.py  model_helper.py  trainer.py
utils/: converter_json2txt.py  data_augment.py  dataargument.py  dataloader.py  drawer.py  get_dataset.py  loss.py  tools.py
yolo/: __init__.py  lazy.py
(+103 files in other folders)
